--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <link rel="stylesheet" href="/fonts/icomoon/style.css">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/magnific-popup.css">
   <link rel="stylesheet" href="/css/jquery-ui.css">
   <link rel="stylesheet" href="/css/owl.carousel.min.css">
@@ -23,5 +23,5 @@
   <link rel="stylesheet" href="/fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="/css/swiper.css">
   <link rel="stylesheet" href="/css/aos.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="{{"/css/style.css" | relative_url}}">
   </head>
