Add relative urls for icons and js

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,15 +12,15 @@
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-  <link rel="stylesheet" href="/fonts/icomoon/style.css">
+  <link rel="stylesheet" href="{{ "/fonts/icomoon/style.css" | relative_url }}">
 <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | relative_url }}">
-  <link rel="stylesheet" href="/css/magnific-popup.css">
-  <link rel="stylesheet" href="/css/jquery-ui.css">
-  <link rel="stylesheet" href="/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="/css/lightgallery.min.css">
-  <link rel="stylesheet" href="/css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="/css/bootstrap-datepicker.css">
-  <link rel="stylesheet" href="/fonts/flaticon/font/flaticon.css">
+  <link rel="stylesheet" href="{{ "/css/magnific-popup.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/css/jquery-ui.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/css/owl.carousel.min.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/css/lightgallery.min.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/css/owl.theme.default.min.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/css/bootstrap-datepicker.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/fonts/flaticon/font/flaticon.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/css/swiper.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/css/aos.css" | relative_url }}">
   <link rel="stylesheet" href="{{"/css/style.css" | relative_url}}">
