--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,6 +1,6 @@
 
-<li class="active"><a href="/">Home</a></li>
-<li><a href="/about/">About Vik</a></li>
-<li><a href="/gallery/">Gallery</a></li>
-<li class="cta"><a href="/blog/">Blog</a></li>
-<li><a href="/contact/">Contact Vik</a></li>
+<li class="active"><a href="{{ "/" | relative_url }}">Home</a></li>
+<li><a href="{{ "/about/" | relative_url }}">About Vik</a></li>
+<li><a href="{{ "/gallery/" | relative_url }}">Gallery</a></li>
+<li class="cta"><a href="{{ "/blog/" | relative_url }}">Blog</a></li>
+<li><a href="{{ "/contact/" | relative_url }}">Contact Vik</a></li>
