Few changes to urls

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,22 +19,22 @@
 
     {% include footer.html %}
 
-      <script src="/js/jquery-3.3.1.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/jquery-migrate-3.0.1.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/jquery-ui.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/popper.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/bootstrap.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/owl.carousel.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/jquery.stellar.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/jquery.countdown.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/jquery.magnific-popup.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/bootstrap-datepicker.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/swiper.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/aos.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/picturefill.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/lightgallery-all.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/jquery.mousewheel.min.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
-      <script src="/js/main.js" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/jquery-3.3.1.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/jquery-migrate-3.0.1.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/jquery-ui.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/popper.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/bootstrap.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/owl.carousel.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/jquery.stellar.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/jquery.countdown.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/jquery.magnific-popup.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/bootstrap-datepicker.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/swiper.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/aos.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/picturefill.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/lightgallery-all.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/jquery.mousewheel.min.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
+      <script src="{{ "/js/main.js" | relative_url }}" type="d4177cdbccb3325693cb9997-text/javascript"></script>
       <script type="d4177cdbccb3325693cb9997-text/javascript">
           $(document).ready(function(){
             $('#lightgallery').lightGallery();
