--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,9 +8,9 @@
       <div class="col-md-3 ml-auto">
         <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
         <ul class="list-unstyled">
-          <li><a href="/about/">About Vik</a></li>
-          <li><a href="/gallery/">Gallery</a></li>
-          <li><a href="/contact/">Contact Vik</a></li>
+          <li><a href="{{ "/about/" | relative_url }}" >About Vik</a></li>
+          <li><a href="{{ "/gallery/" | relative_url }}" >Gallery</a></li>
+          <li><a href="{{ "/contact/" | relative_url }}" >Contact Vik</a></li>
         </ul>
       </div>
       <div class="col-md-4">
