--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
         <div class="row">
             <div class="blog-entry text-center" data-aos="fade-up" data-aos-delay="200">
                 <div class="d-block mb-4">
-                    <img src="{{ page.postImage }}" alt="Image" class="img-fluid">
+                    <img src="{{ page.featureImage }}" alt="Image" class="img-fluid">
                 </div>
                 <div>
                     <h1 class="mb-4">{{ page.title }}</h1>
