Add intro text content to all pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row mb-5">
       <div class="col-md-4">
         <h2 class="footer-heading text-uppercase mb-4">Vik in a sentence</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit aliquid quibusdam fugit architecto.</p>
+        <p>Living to look back one day to a couple of regrets and many good memories. If I come back before reaching my destination, please send me back.</p>
       </div>
       <div class="col-md-3 ml-auto">
         <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
