--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,20 +4,18 @@ layout: default
 
 <div class="site-section">
     <div class="container">
-        <div class="row">
+        <div class="row align-items-center text-center">
             <div class="blog-entry text-center" data-aos="fade-up" data-aos-delay="200">
                 <div class="d-block mb-4">
                     <img src="{{ page.featureImage }}" alt="Image" class="img-fluid">
                 </div>
-                <div>
                     <h1 class="mb-4">{{ page.title }}</h1>
                     <div class="mb-4 post-meta ">
-                        <div class="mr-2"><img src="{{ page.postImage }}" alt="Image" class="img-fluid"></div>
+                        <!--<div class="mr-2"><img src="{{ page.postImage }}" alt="Image" class="img-fluid"></div>--> 
                         <div><span>By {{ page.author }}</span> &mdash; <span>{{ page.date | date: '%B %d, %Y' }}</span>
                         </div>
                     </div>
-                    <p>{{ content }}</p>
-                </div>
+                    <p class="text-center">{{ content }}</p>
                 <div>
                     {{ page.postFooter }}
                 </div>
