--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,19 +3,19 @@
 
 <header class="site-navbar py-3" role="banner">
   <div class="container-fluid">
-    <div class="row align-items-center">
+    <div class="row align-items-center" >
       <div class="col-11 col-xl-2">
-        <h1 class="mb-0"><a href="/blog" class="text-white h2 mb-0 logo-text">vik<span
+        <h1 class="mb-0" id="small"><a href="/blog" class="text-white h2 mb-0 logo-text">vik<span
               class="text-primary">Tochi</span> </a></h1>
       </div>
-      <div class="col-12 col-md-10 d-none d-xl-block">
+      <div class="col-12 col-md-10 d-none d-xl-block ">
         <nav class="site-navigation position-relative text-right" role="navigation">
           <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
            {% include nav-links.html %}
           </ul>
         </nav>
       </div>
-      <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#"
+      <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" id="flx" style="position: relative; top: 3px;"><a href="#"
           class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
     </div>
   </div>
