--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 {% endif %}
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   <link rel="stylesheet" href="{{ "/fonts/icomoon/style.css" | relative_url }}">
 <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/css/magnific-popup.css" | relative_url }}">
