Add image changes to home and about place, and change events to places gallery

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row mb-5">
       <div class="col-md-4">
         <h2 class="footer-heading text-uppercase mb-4">Vik in a sentence</h2>
-        <p>Living to look back one day to a couple of regrets and many good memories. If I come back before reaching my destination, please send me back.</p>
+        <p>Living to look back one day to a couple of regrets and many good memories, and if I do return before reaching my destination, please send me back.</p>
       </div>
       <div class="col-md-3 ml-auto">
         <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
@@ -18,7 +18,7 @@
         <p>
           <a href="#" class="p-2 pl-0"><span class="icon-facebook"></span></a>
           <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-          <a href="#" class="p-2"><span class="icon-youtube"></span></a>
+          <a href="#" class="p-2"><span class="icon-linkedin"></span></a>
           <a href="#" class="p-2"><span class="icon-instagram"></span></a>
         </p>
       </div>
@@ -30,8 +30,8 @@
 
             Copyright &copy; <script type="0c5cb108d2925e4af7ac1058-text/javascript">
               document.write(new Date().getFullYear());
-            </script> All rights reserved | Tochi <i class="icon-heart text-primary"
-              aria-hidden="true"></i> Viktor.
+            </script> All rights reserved | By &mdash; Viktor Tochi with <i class="icon-heart text-primary"
+              aria-hidden="true"></i>
 
           </p>
         </div>
