Fix contact form and blog posts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row mb-5">
       <div class="col-md-4">
         <h2 class="footer-heading text-uppercase mb-4">Vik in a sentence</h2>
-        <p>Living to look back one day to a couple of regrets and many good memories, and if I do return before reaching my destination, please send me back.</p>
+        <p>Living to look back one day to a couple of regrets and many good memories and if I do return before reaching my destination, please send me back.</p>
       </div>
       <div class="col-md-3 ml-auto">
         <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
@@ -16,10 +16,9 @@
       <div class="col-md-4">
         <h2 class="footer-heading text-uppercase mb-4">Connect with Vik</h2>
         <p>
-          <a href="#" class="p-2 pl-0"><span class="icon-facebook"></span></a>
-          <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-          <a href="#" class="p-2"><span class="icon-linkedin"></span></a>
-          <a href="#" class="p-2"><span class="icon-instagram"></span></a>
+          <a href="{{ "https://www.linkedin.com/in/victorokoro" | relative_url }}" target="_blank" class="p-2"><span class="icon-linkedin"></span></a>
+          <a href="{{ "https://www.twitter.com/viktochi" | relative_url }}" target="_blank" class="p-2"><span class="icon-twitter"></span></a>
+          <a href="{{ "https://www.instagram.com/viktortochi" | relative_url }}" target="_blank" class="p-2"><span class="icon-instagram"></span></a>
         </p>
       </div>
     </div>
