--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
                         </div>
                     </div>
                     <p class="text-center">{{ content }}</p>
-                <div>
+                <div style="margin-top: 150px;">
                     {{ page.postFooter }}
                 </div>
             </div>
