--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
   <div class="container-fluid">
     <div class="row align-items-center" >
       <div class="col-11 col-xl-2">
-        <h1 class="mb-0" id="small"><a href="/blog" class="text-white h2 mb-0 logo-text">vik<span
+        <h1 class="mb-0" id="small"><a href="/blog/" class="text-white h2 mb-0 logo-text">vik<span
               class="text-primary">Tochi</span> </a></h1>
       </div>
       <div class="col-12 col-md-10 d-none d-xl-block ">
