--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,6 +1,7 @@
 
-<li class="active"><a href= "/blog">Home</a></li>
+<li class="active"><a href= "/blog/">Home</a></li>
 <li><a href="{{ "/about/" | relative_url }}">About Vik</a></li>
+<li><a href="{{ "https://www.linkedin.com/in/victorokoro" | relative_url }}" target="_blank">LinkedIn Profile</a></li>
 <li class="cta"><a href="{{ "/thoughts/" | relative_url }}">Blog</a></li>
 <li><a href="{{ "/gallery/" | relative_url }}">Photographie</a></li>
 <li><a href="{{ "/contact/" | relative_url }}">Contact Vik</a></li>
